# qi-lang

./: .gitattributes  .gitignore  404.html  AGENTS.md  BUILD-IDEA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOC-DRAFT.md  DOC_SYSTEM.md  FUNCTIONS.md  IMPLEMENTATION.md  KVS_DESIGN.md  LICENSE-APACHE  LICENSE-MIT  MATCH-NEXT-DRAFT.md  PERFORMANCE.md  PIPE-SPEC-DRAFT.md  README.ja.md  README.md  ROADMAP.md  SPEC.md  STRING-draft.md  STYLE_GUIDE.md  TODO.md  TORTURE_TEST_FINDINGS.md  TUTORIAL.md  VALIDATION_DESIGN.md  check_links.sh  index.html  markdown-idea.md  mkdocs.yml  sitemap.xml  stdformat-idea.md  test_destructure.qi  最適化案なぐりがき.md  最適化案統合.md  最適化案統合gemini評価.txt
.github/workflows/: ci.yml  docs.yml  release.yml
assets/logo/: README.md  README_LOGO_PACK.md
benches/: eval_bench.rs  large_dataset.rs  optimizations.rs  parser_lexer.rs
claude_stress/: 01_parser_stress.qi  02_match_stress.qi  03_pipeline_stress.qi  04_macro_loop_stress.qi  05_concurrency_stress.qi  06_edge_cases_stress.qi  07_concurrency_torture_test.qi  07_let_destructuring_stress.qi  08_match_patterns_stress.qi  08_profile_server_torture_test.qi  09_macro_expansion_stress.qi  README.md  run_all.qi
cli/: index.html
docs/: cli.md  formatter.md  index.md  style-guide.md
docs/en/: cli.md  project.md  style-guide.md
docs/ja/: cli.md  index.md  project.md
docs/spec/: 01-overview.md  02-flow-pipes.md  03-concurrency.md  04-match.md  05-syntax-basics.md  06-data-structures.md  07-functions.md  08-error-handling.md  09-modules.md  10-stdlib-string.md  11-stdlib-http.md  12-stdlib-json.md  13-stdlib-io.md  14-stdlib-test.md  15-stdlib-math.md  16-stdlib-auth.md  17-stdlib-database.md  18-stdlib-websocket.md  19-stdlib-debug.md  19-stdlib-validation.md  FUNCTION-INDEX.md  QUICK-REFERENCE.md  README.md
docs/tutorial/: 00-lisp-basics.md  01-getting-started.md  04-error-handling.md  05-concurrency.md  06-web-api.md  README.md
examples/: 01-hello.qi  02-functions.qi  03-data-structures.qi  04-pipelines.qi  05-pattern-matching.qi  06-error-handling.qi  07-concurrency.qi  08-command-pipelines.qi  09-log-analysis.qi  10-file-processing.qi  11-http-client.qi  12-web-server.qi  13-rest-api.qi  14-json-transform.qi  14-websocket.qi  15-parallel-data.qi  16-stdin-processing.qi  17-jwt-auth.qi  18-postgresql.qi  19-auth-api.qi  20-mysql.qi  21-debug-trace.qi  21-kvs-unified.qi  22-cms-server.qi  23-table-processing.qi  24-binary-data.qi  25-database-blob.qi  README.md  bench_im.qi  builtins.qi  defer.qi  docker-compose.yml  hello.qi  match_map_test.qi  match_test.qi  math_utils.qi  module_test.qi  operators.qi  pipe_debug.qi  run-examples.sh  (+6 more)
examples/agent-sdk/: README.md  USAGE.md  qi-pro  qi-pro.md  qi-pro.qi  test-sample.qi
examples/cms/: README.md  db.qi  main.qi  test.sh
examples/data-tool/: README.md  main.qi
examples/static/: swagger-ui.html
examples/web-api/: README.md  api_pipeline.qi
examples_old_backup/: builtins2.qi  builtins3.qi  match_test.qi  module_test.qi  pipe_test.qi  test_format.qi  test_newline.qi  test_regex_phase1.qi  test_spacing.qi  try.qi
examples_old_backup/web-api/: README.md  api_pipeline.qi  github_user.qi  json_transform.qi
gemini/: test_collections_and_pipelines.qi  test_concurrency.qi  test_control_flow_and_functions.qi  test_errors_and_modules.qi  test_stdlib_data_formats.qi  test_stdlib_http.qi  test_stdlib_io_and_path.qi  test_stdlib_string.qi  test_streams.qi  test_syntax_and_data.qi
gemini/stress/: args_torture_test.qi  core_basic_torture_test.qi  core_functions_torture_test.qi  core_state_meta_torture_test.qi  core_util_torture_test.qi  csv_torture_test.qi  hof_torture_test.qi  json_torture_test.qi  list_torture_test.qi  log_torture_test.qi  map_torture_test.qi  match_macro_stress_test.qi  math_torture_test.qi  parser_stress_test.qi  path_torture_test.qi  predicates_torture_test.qi  queue_stack_torture_test.qi  set_torture_test.qi  stats_torture_test.qi  string_torture_test.qi  time_torture_test.qi  util_torture_test.qi  yaml_torture_test.qi
ja/: index.html
ja/cli/: index.html
ja/project/: index.html
ja/spec/: index.html
ja/style-guide/: index.html
ja/tutorial/: index.html
learning/impl/: 01-overview.md  02-lexer.md  03-parser.md  04-evaluator.md  05-environment.md  06-builtins.md  README.md
learning/rust/: 01-basics.md  02-ownership.md  03-result-option.md  04-collections.md  05-concurrency.md  06-macros.md  README.md
learning/tutorial/: 01-basics.md  02-collections.md  03-control-flow.md  04-functional.md  05-concurrency.md  06-practical.md  README.md
project/: index.html
qi-vscode/: .eslintrc.json  .gitignore  README.ja.md  README.md  language-configuration.json  package-lock.json  package.json
qi-vscode/src/: extension.ts
qi-vscode/syntaxes/: qi.tmLanguage.json
scripts/: add_qi_doc_tags.sh  generate_std_docs.sh  list_qi_functions.sh  pre-commit-check.sh  release.sh
search/: search_index.json
spec/: index.html
spec/01-overview/: index.html
spec/02-flow-pipes/: index.html
spec/03-concurrency/: index.html
spec/04-match/: index.html
spec/05-syntax-basics/: index.html
spec/06-data-structures/: index.html
spec/07-functions/: index.html
spec/08-error-handling/: index.html
spec/09-modules/: index.html
spec/10-stdlib-string/: index.html
spec/11-stdlib-http/: index.html
spec/12-stdlib-json/: index.html
spec/13-stdlib-io/: index.html
spec/14-stdlib-test/: index.html
spec/15-stdlib-math/: index.html
src/: constants.rs  dap.rs  debugger.rs  error.rs  eval.rs  formatter.rs  i18n.rs  intern.rs  lexer.rs  lib.rs  main.rs  parser.rs  project.rs  upgrade.rs  value.rs
style-guide/: index.html
tests/: README.md  control_flow_comprehensive.qi  core_test.qi  integration_mysql.rs  integration_postgres.rs  integration_redis.rs  macro_basic.qi  match_comprehensive.qi  pipeline_test.qi  stress_nested_structures.qi  stress_pipeline.qi  torture_control_flow.qi  torture_fstring.qi  torture_recursion_strings.qi  torture_special_forms.qi  verify_as.qi  verify_quasiquote.qi
tutorial/: index.html
(+432 files in other folders)
