[package]
name = "qi-lang"
version = "0.1.0"
edition = "2021"
authors = ["hiro"]

[lib]
name = "qi_lang"
path = "src/lib.rs"

[[bin]]
name = "qi"
path = "src/main.rs"

[dependencies]
base64 = "0.21"
urlencoding = "2.1"
html-escape = "0.2"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.9.2"
regex = "1.11.3"
serde_json = "1.0.145"
rayon = "1.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
encoding_rs = "0.8"
glob = "0.3"
zip = "2.1"
flate2 = "1.0"
tempfile = "3.20"
rustyline = "14.0"
dirs = "5.0"
