[package]
name = "qi-lang"
version = "0.1.0"
edition = "2021"
authors = ["Hironobu Sano"]
license = "MIT OR Apache-2.0"
description = "A modern Lisp with pipelines, pattern matching, and concurrency"
repository = "https://github.com/sanohiro/qi-lang"
keywords = ["lisp", "pipeline", "concurrency", "pattern-matching", "functional"]
categories = ["development-tools", "parser-implementations"]
readme = "README.md"

[lib]
name = "qi_lang"
path = "src/lib.rs"

[[bin]]
name = "qi"
path = "src/main.rs"

# =====================================
# Features定義
# =====================================
[features]
# デフォルト: Pure Rust全部入り
default = [
    # データベース（Pure Rust）
    "db-sqlite",
    # "db-postgres",  # TODO: Phase 4で実装
    # "db-mysql",     # TODO: Phase 4で実装

    # KVS（Key-Value Store）
    "kvs-redis",

    # Web通信
    "http-client",
    "http-server",

    # データフォーマット
    "format-json",
    "format-csv",
    "format-markdown",
    "format-yaml",

    # 文字列処理
    "string-encoding",
    "string-crypto",
    "encoding-extended",

    # ファイル・I/O
    "io-glob",
    "io-temp",
    "util-zip",

    # 標準ライブラリ拡張
    "std-time",
    "std-math",
    "std-stats",
    "std-set",

    # 認証・セキュリティ
    "auth-jwt",
    "auth-password",

    # 開発支援
    "repl",
    "dev-tools",

    # コマンド実行
    "cmd-exec",
]

# プリセット構成
minimal       = ["io-glob"]  # 最小構成（組み込み・WASM用）+ 基本的なファイル操作
web-server    = ["http-server", "format-json", "db-sqlite", "io-glob"]  # list-dirのためio-globが必要
cli-tool      = ["repl", "format-json", "io-glob", "util-zip"]
data-processing = ["db-sqlite", "format-json", "format-csv", "io-glob"]  # list-dirのためio-globが必要

# C依存含むフル機能（将来用）
# full = ["default", "db-odbc", "db-duckdb"]

# 個別機能フラグ
db-sqlite = ["dep:rusqlite", "string-encoding"]  # BLOBデータのbase64エンコードにstring-encodingが必要
db-postgres = ["dep:tokio-postgres", "dep:tokio", "format-json"]  # PostgreSQL対応（非同期）
db-mysql = ["dep:mysql_async", "dep:tokio", "format-json"]  # MySQL対応（非同期）
# db-odbc = ["dep:odbc-api"]  # Optional, C依存
# db-duckdb = ["dep:duckdb"]  # Optional, C++依存、サイズ巨大

kvs-redis = ["dep:redis", "dep:tokio", "format-json"]  # Redis対応（非同期）
# kvs-memcached = ["dep:memcache"]  # TODO: Memcached対応（将来）
# kvs-dynamodb = ["dep:rusoto_dynamodb"]  # TODO: DynamoDB対応（将来、C依存）

http-client = ["dep:reqwest", "format-json", "string-encoding", "util-zip"]  # JSON、base64、gzip圧縮が必要
http-server = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio", "dep:tokio-util", "dep:tokio-stream", "format-json", "string-encoding", "util-zip"]  # JSON、URL/base64、gzip圧縮、ストリーミングが必要

format-json = ["dep:serde_json"]
format-csv = []  # Pure Rust自前実装
format-markdown = []  # Pure Rust自前実装
format-yaml = ["dep:serde_yaml"]

string-encoding = ["dep:base64", "dep:urlencoding", "dep:html-escape"]
string-crypto = ["dep:sha2", "dep:uuid"]
encoding-extended = ["dep:encoding_rs"]

io-glob = ["dep:glob"]
io-temp = ["dep:tempfile"]
util-zip = ["dep:zip", "dep:flate2"]

repl = ["dep:rustyline", "dep:dirs"]
dev-tools = []  # Pure Rust自前実装

cmd-exec = []  # Pure Rust実装、外部依存なし

std-time = ["dep:chrono"]
std-math = ["dep:rand"]
std-stats = []  # Pure Rust自前実装
std-set = []    # Pure Rust自前実装

auth-jwt = ["dep:jsonwebtoken", "format-json"]  # JWT生成・検証（JSON依存）
auth-password = ["dep:argon2", "dep:rand_core"]  # パスワードハッシュ（argon2、bcryptより推奨）

# 統合テスト用（Docker自動起動・削除）
integration-tests = ["db-postgres", "db-mysql", "kvs-redis"]

# =====================================
# 依存関係
# =====================================
[dependencies]
# Core（常に必要）
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"
regex = "1.11"
once_cell = "1.19"
dashmap = "6.1"  # スレッドセーフなHashMap（Regexキャッシュ等で使用）
lazy_static = "1.5"  # 既存コード互換性のため残す（徐々にonce_cellへ移行予定）
strsim = "0.11"  # 編集距離計算（エラーメッセージ生成用）
im = "15.1"  # Persistent data structures（構造共有でclone()を高速化）
smallvec = "1.13"  # スタック最適化ベクタ（少数要素時にヒープ確保回避）
serde = { version = "1.0", features = ["derive"] }  # プロジェクトメタデータのシリアライズ用
toml = "0.8"  # qi.tomlの読み書き用

# Optional（feature-gated）
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
# odbc-api = { version = "8.1", optional = true }  # Optional, C依存

reqwest = { version = "0.12", features = ["json", "blocking", "gzip", "deflate", "brotli"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util"], optional = true }
tokio-util = { version = "0.7", features = ["io", "codec"], optional = true }
tokio-stream = { version = "0.1", optional = true }
hyper = { version = "1", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

base64 = { version = "0.21", optional = true }
urlencoding = { version = "2.1", optional = true }
html-escape = { version = "0.2", optional = true }
sha2 = { version = "0.10", optional = true }
uuid = { version = "1.6", features = ["v4"], optional = true }

encoding_rs = { version = "0.8", optional = true }
glob = { version = "0.3", optional = true }
zip = { version = "2.1", optional = true }
flate2 = { version = "1.0", optional = true }
tempfile = { version = "3.20", optional = true }

rustyline = { version = "14.0", optional = true }
dirs = { version = "5.0", optional = true }

chrono = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }

[dev-dependencies]
testcontainers = "0.15"

# プロファイリング用にrelease buildでもデバッグシンボルを有効化
# コンパイラ最適化（Phase 18）
[profile.release]
debug = true
lto = true           # リンク時最適化（クレート間の最適化）
codegen-units = 1    # 最大限の最適化（コンパイル時間は増加）
